manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-hashitalks-svc
spec:
  type: LoadBalancer
  selector:
    app: hello-hashitalks
  ports:
    - name: http
      port: 80
      targetPort: 8080
